--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "space-tourism-website-main",
+  "homepage": "https://Mostafa-Y-Mansour.github.io/sunnyside-agency-landing-page",
+  "name": "sunnyside-agency-landing-page",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +14,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build", 
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
